# log-analyzer

./: .coverage  .gitignore  LICENSE  README.md  new_out.csv  old.json  out.csv  out.txt  out2.csv  out2.json  out4.json  out_test.csv  pyproject.toml  result.json  result.txt
.github/workflows/: python-package.yml
.github/workfows/: python-package.yml
log_analyzer/: __init__.py  analyzer.py  cli.py  formatter.py  io_utils.py  output.py  parser.py  parser_args.py
log_analyzer_sattarab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_analyzer.py  test_cli.py  test_output.py  test_parser.py
